--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@types/node": "^20.0.0",
     "esbuild": "^0.25.9",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "vite": "^7.1.9"
   }
 }
