--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,10 +1,12 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
     "outDir": "./dist",
     "rootDir": "./src",
-    "strict": true,
-    "esModuleInterop": true
-  }
+    "baseUrl": "./src",
+    "paths": {
+      "@augustinus/core": ["../core/src"]
+    }
+  },
+  "include": ["src/**/*.ts"]
 }
