--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -5,7 +5,7 @@
     "rootDir": "./src",
     "baseUrl": "./src",
     "paths": {
-      "@augustinus/core/*": ["../core/src/*"]
+      "@augustinus/core": ["../core/src"]
     }
   },
   "include": ["src/**/*.ts"]
