--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
   "name": "@augustinus/core",
   "version": "3.2.5",
   "description": "Uma ferramenta para transformar texto em notação gregoriana GABC",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "type": "module",
   "publishConfig": {
     "access": "public"
