hot realoading + leitura

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -9,7 +9,10 @@
     "jsx": "preserve",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@augustinus/core": ["../core/src"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
